--- a/styles/limitless/_constants.sass
+++ b/styles/limitless/_constants.sass
@@ -11,20 +11,20 @@ $large: 960px
 $columns: 12
 $columnWidth: $maxWidth / $columns - $u
 
-/ $blue: #00b7ff
-/ $lightGrey: #eeeef8
-/ $medGrey: #666666
-/ $borderGrey: #cccccc
-/ $slateBlue: #9999a8
-/ $medSlateBlue: lighten($slateBlue, 10%)
-/ $lightSlateBlue: lighten($slateBlue, 20%)
-/ $textColor: #333333
-
 $blue: #00b7ff
-$lightGrey: #ffffff - #eeeef8
-$medGrey: #ffffff - #666666
-$borderGrey: #ffffff - #cccccc
-$slateBlue: #ffffff - #9999a8
-$medSlateBlue: #ffffff - lighten($slateBlue, 10%)
-$lightSlateBlue: #ffffff - lighten($slateBlue, 20%)
-$textColor: #ffffff - #333333
+$lightGrey: #eeeef8
+$medGrey: #666666
+$borderGrey: #cccccc
+$slateBlue: #9999a8
+$medSlateBlue: lighten($slateBlue, 10%)
+$lightSlateBlue: lighten($slateBlue, 20%)
+$textColor: #333333
+
+// $blue: #00b7ff
+// $lightGrey: #ffffff - #eeeef8
+// $medGrey: #ffffff - #666666
+// $borderGrey: #ffffff - #cccccc
+// $slateBlue: #ffffff - #9999a8
+// $medSlateBlue: #ffffff - lighten($slateBlue, 10%)
+// $lightSlateBlue: #ffffff - lighten($slateBlue, 20%)
+// $textColor: #ffffff - #333333
