--- a/templates/pages/about.rhtml
+++ b/templates/pages/about.rhtml
@@ -2,9 +2,26 @@
 <div class="pagebody">
 	<p>This blog is the documentation of an independent study project done for a senior-level English course at Westwood High School in Austin, Texas.</p>
 	<dl>
-		<dt>en&middot;ig&middot;mat&middot;ic</dt>
+		<dt id="cipher">ci&middot;pher</dt>
+		<dd data-word-class="noun">an algorithm for performing <a href="#encryption">encryption</a> or <a href="#decryption">decryption</a>.</dd>
+		<dt id="ciphertext">ci&middot;pher&middot;text</dt>
+		<dd data-word-class="noun">the result of an <a href="#encryption">encryption</a> performed on <a href="#plaintext">plaintext</a> using a <a href="#cipher">cipher</a>.</dd>
+		<dt id="cryptanalysis">crypt&middot;a&middot;nal&middot;y&middot;sis</dt>
+		<dd data-word-class="noun">the art and science of analyzing information systems in order to study the hidden aspects of the systems; used to breach cryptographic security systems and gain access to the contents of <a href="#encryption">encrypted</a> messages, even if the <a href="#key">cryptographic key</a> is unknown.</dd>
+		<dt id="cryptography">cryp&middot;tog&middot;ra&middot;phy</dt>
+		<dd data-word-class="noun">the process or skill of communicating in or deciphering secret writings or <a href="#cipher">ciphers</a>.</dd>
+		<dt id="decryption">de&middot;cryp&middot;tion</dt>
+		<dd data-word-class="noun">the reverse process of <a href="#encryption">encryption</a>, where a <a href="#ciphertext">ciphertext</a> is transformed back into a <a href="#plaintext">plaintext</a>.</dd>
+		<dt id="encryption">en&middot;cryp&middot;tion</dt>
+		<dd data-word-class="noun">the process of encoding messages (or information) in such a way that eavesdroppers or hackers cannot read it, but that authorized parties can.</dd>
+		<dt id="enigmatic">en&middot;ig&middot;mat&middot;ic</dt>
 		<dd data-word-class="adjective">difficult to interpret or understand; mysterious.</dd>
-		<dt>cryp&middot;tog&middot;ra&middot;phy</dt>
-		<dd data-word-class="noun">the process or skill of communicating in or deciphering secret writings or ciphers.</dd>
+		<dt id="key">key</dt>
+		<dd data-word-class="noun">a parameter that determines the functional output of a <a href="#cipher">cipher</a>; specifies how the <a href="#plaintext">plaintext</a> is transformed into the <a href="#ciphertext">ciphertext</a> in <a href="#encryption">encryption</a> and vice-versa in <a href="#decryption">decryption</a>.</dd>
+		<dt id="plaintext">plain&middot;text</dt>
+		<dd data-word-class="noun">information a sender wishes to transmit to a receiver, i.e. the message.</dd>
+		<dt id="steganography">ste&middot;ga&middot;no&middot;gra&middot;phy</dt>
+		<dd data-word-class="noun">the art and science of writing hidden messages in such a way that no one, apart from the sender and intended recipient, suspects the existence of the message; a form of security through obscurity.</dd>
 	</dl>
+	<p>Credit to <a href="http://en.wikipedia.org/">Wikipedia</a> and <a href="http://wordnik.com/">Wordnik</a> for some definitions.</p>
 </div>
